--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,10 +20,12 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.google.android.gms:play-services:8.1.0'
     compile files('libs/com.sun.jersey.jersey-core-1.4.0.jar')
     compile files('libs/jersey-client.jar')
+    compile files('libs/android-async-http-1.4.4.jar')
+    compile files('libs/apache-httpcomponents-httpcore.jar')
 }
